fix: small dialog title on mobile

--- a/Frontend/src/app/features/dialogs/card-dialog/card-dialog-container/card-header/card-header.component.scss
+++ b/Frontend/src/app/features/dialogs/card-dialog/card-dialog-container/card-header/card-header.component.scss
@@ -12,6 +12,7 @@
         display: grid;
         grid-template-columns: auto 1fr auto;
         height: auto;
+        min-height: $titleHeight;
         .card-dialog-header-text {
             grid-column: 2;
         }
